crates/momus-convert/src/snapshots/momus_convert__har__tests__snapshot_har_post_with_body.snap
---
source: crates/momus-convert/src/har.rs
expression: plan
---
{
  "name": "HAR: 1 entries from .tmperiXDE",
  "base_url": "",
  "default_headers": {},
  "steps": [
    {
      "type": "request",
      "name": "req_0_api.example.com_users",
      "method": "POST",
      "url": "https://api.example.com/users",
      "headers": {
        "Content-Type": "application/json"
      },
      "body": {
        "name": "test"
      },
      "assert": [
        {
          "status": 201
        }
      ],
      "save_as": "",
      "soft_fail": false
    }
  ],
  "setup": [],
  "teardown": []
}
