crates/momus-convert/src/snapshots/momus_convert__har__tests__snapshot_har_single_get.snap
---
source: crates/momus-convert/src/har.rs
assertion_line: 391
expression: plan
---
{
  "name": "HAR: 1 entries from test.har",
  "base_url": "",
  "default_headers": {},
  "steps": [
    {
      "type": "request",
      "name": "req_0_api.example.com_health",
      "method": "GET",
      "url": "https://api.example.com/health",
      "headers": {},
      "body": null,
      "assert": [
        {
          "status": 200
        },
        {
          "content_type": "application/json"
        }
      ],
      "save_as": "",
      "soft_fail": false
    }
  ],
  "setup": [],
  "teardown": []
}
